fix(style): added new CSS rules to try to prevent scrollbars from showing forcefully on all browsers

--- a/app/client/assets/css/components.less
+++ b/app/client/assets/css/components.less
@@ -51,6 +51,7 @@ div {
     padding-top: 14px;
     padding-bottom: 10px;
     overflow: auto;
+    scrollbar-width: none;
     // overflow: hidden;
 
     pre {
