--- a/app/client/assets/css/reset.less
+++ b/app/client/assets/css/reset.less
@@ -22,3 +22,7 @@ video,
 iframe {
   max-width: 100%;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
